--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-.venv/
-__pycache__/
-*.pyc
 .DS_Store
+__pycache__/
+*.py[cod]
+*.pyc
+*.egg-info/
+.venv/
+.env/
 
-# runtime artifacts
-data/
+# Build outputs
+build/
+dist/
+*.spec
 
-
+# Runtime artifacts
+data/jobs/
